# espforth

./: .gitignore  CMakeLists.txt  expand_macros_cgpt.sh  partitions.csv  sdkconfig
docs/: readme_udp.md
fatfs/: boot.fs
main/: CMakeLists.txt  espforth.c  espforth_i.c
samples/: 7segs_demo.fs  adc-display.fs  analog_demo.fs  elevator.fs  files.fs  lcd.fs  lcd_demo.fs  load.fs  morse.fs  myboot.fs  pcf8574.fs  pin_examples.fs  simple.fs  sostest.fs  tone_demo.fs  version.fs
tools/: create_code_cases.sh
